test/vm/errors/parser/double_operator.ach
// Parser error: consecutive binary operators
// Expected: error about expected expression

let x = 5 + + 3
